Changed jQuery call to different HTML file, and updated that file.

--- a/bootstrap/index-iframe-big-top-image.html
+++ b/bootstrap/index-iframe-big-top-image.html
@@ -206,7 +206,7 @@
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
 		<script>
-			$("#testimonial").load("fire-protection-text.html");
+			$("#testimonial").load("fire-testimonial.html");
 		</script>
 	</body>
 </html>
